k8s/06-adminer-deploy.yaml
# adminer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: cofrap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
