k8s/03-postgres-service.yaml
# service for postgres
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cofrap
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
