k8s/07-adminer-service.yaml
# service for adminer
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: cofrap
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
